<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".userInfo">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/select_your_gender"
        android:textColor="#ffffff"
        android:textSize="20sp"
         />


    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="187dp">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:background="#000000"
            android:buttonTint="@color/colorAccent"
            android:text="@string/female"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-47dp"
            android:background="#000000"
            android:buttonTint="@color/colorAccent"
            android:text="@string/male"
            android:textColor="#ffffff" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/desiredGender"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="190dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/what_are_you_looking_for"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:background="#000000"
                android:buttonTint="@color/colorAccent"
                android:text="@string/female"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="0dp"
                android:background="#000000"

                android:buttonTint="@color/colorAccent"
                android:text="@string/both"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="0dp"
                android:background="#000000"
                android:buttonTint="@color/colorAccent"
                android:text="@string/male"
                android:textColor="#ffffff" />
        </RelativeLayout>

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="66dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="27dp"
        android:background="@color/colorAccent"
        android:text="@string/next2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-230dp"
        android:src="@drawable/somelikeithot" />


</RelativeLayout>
